Updated styles, post layout, and components

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,8 +1,9 @@
 ---
-import '../components/styles/Navbar.css'
+import '../styles/Navbar.css'
 ---
 
 <div class="navbar-container">
     <a href="/" class="home-a">Home</a>
     <a href="/projects" class="projects-a">Projects</a>
+    <a href="https://github.com/alexwkleung" class="github-a">GitHub</a>
 </div>
