--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,12 @@
+@font-face {
+    font-family: 'Inter-Regular';
+    src: url('../styles/fonts/Inter-Regular.ttf');
+}
+@font-face {
+    font-family: 'Inter-Bold';
+    src: url('../styles/fonts/Inter-Bold.ttf');
+}
+
 body {
     margin: 0;
 }
@@ -7,9 +16,14 @@ body {
     /*border: 1px solid black;*/
     width: 640px;
     margin: 0 auto;
-    top: 70px;
+    top: 65px;
+    font-family: 'Inter-Regular';
 }
 
 .home-heading {
+    font-family: 'Inter-Bold';
+}
 
+.github-a {
+    text-decoration: none;
 }
