--- a/src/components/PostsList.astro
+++ b/src/components/PostsList.astro
@@ -1,20 +1,36 @@
 ---
-import '../components/styles/PostsList.css'
+import '../styles/PostsList.css'
 import dayjs from 'dayjs'
 
-const posts = await Astro.glob('../pages/posts/*.md');
+const allPosts = [...await Astro.glob('../pages/posts/*.md')];
+
+let postCount: string = "";
+
+if(allPosts.length === 0) {
+    postCount = String(allPosts.length + " posts");
+} else if(allPosts.length === 1) {
+    postCount = String(allPosts.length + " post");
+} else {
+    postCount = String(allPosts.length + " posts");
+}
 ---
 
 <div class="posts-list-container">
-    <h1 class="posts-list-heading">Blog</h1>
+    <h1 class="posts-list-heading">Blog 
+        <span id="post-count">
+            ({postCount})
+        </span>
+    </h1>
     {
-    posts.slice(0, 3).reverse().map((post) => (
-        <div class="posts-list">
-            <a href={post.url}>{post.frontmatter.title}</a>
+    allPosts.reverse().map((post) =>
+        <div class="post">
+            <li class="post-li">
+                <a href={post.url} class="post-a">{post.frontmatter.title}</a>
+            </li>
             <div class="post-date">
                 {dayjs(post.frontmatter.pubDate).format('MMMM DD, YYYY')}
             </div>
         </div>
-      ))
+      )
     }
 </div>
