--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,6 @@
 ---
 import '../styles/global.css'
 import Navbar from '../components/Navbar.astro'
-import Footer from '../components/Footer.astro'
 import PostsList from '../components/PostsList.astro'
 ---
 
@@ -9,7 +8,7 @@ import PostsList from '../components/PostsList.astro'
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
-		<title>Alex's Website</title>
+		<title>Alex Leung</title>
 	</head>
 	<body>
 		<Navbar></Navbar>
@@ -22,10 +21,9 @@ import PostsList from '../components/PostsList.astro'
 				In my blog, I post about technology and random things.
 				<br>
 				<br>
-				Feel free to check out my <a href="https://github.com/alexwkleung">GitHub</a>.
+				Feel free to check out my <a href="https://github.com/alexwkleung" class="github-a">GitHub</a>.
 			</p>
 		</div>
 		<PostsList></PostsList>
-		<Footer></Footer>
 	</body>
 </html>
