--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -14,19 +14,23 @@
     text-align: left;
     margin: 0 auto;
     top: 50px;
-    font-family: 'Inter-Regular'
+    font-family: 'Inter-Regular';
+    font-size: 18px;
 }
 
 .home-a {
     text-decoration: none;
     padding-right: 10px;
+    color: #5C6BC0;
 }
 
 .projects-a {
     text-decoration: none;
     padding-right: 10px;
+    color: #5C6BC0;
 }
 
 .github-a {
     text-decoration: none;
+    color: #5C6BC0;
 }
