Fixed article date and updated README.md

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,10 +1,11 @@
 ---
+const githubLink: string = "https://github.com/alexwkleung";
 ---
 
 <div class="navbar-container">
     <a href="/" class="home-a">Home</a>
     <a href="/projects" class="projects-a">Projects</a>
-    <a href="https://github.com/alexwkleung" class="github-a">GitHub</a>
+    <a href={githubLink} class="github-a">GitHub</a>
 </div>
 
 <style>
