Fixed margins and font sizes

--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -28,6 +28,6 @@ const { frontmatter } = Astro.props;
 <style>
     body {
         margin: 0;
-        background-color: #edecec;
+        /*background-color: #edecec;*/
     }
 </style>
