--- a/src/styles/markdown-post.css
+++ b/src/styles/markdown-post.css
@@ -11,9 +11,9 @@
     position: relative;
     width: 640px;
     margin: 0 auto;
-    top: 70px;
+    top: 95px;
     padding-bottom: 100px;
-    font-size: 18px;
+    font-size: 17px;
 }
 
 .article-heading {
@@ -70,4 +70,13 @@
 }
 .article-slot-container a {
     color: #5C6BC0;
+}
+.article-slot-container pre {
+    padding: 15px 15px 15px 15px;
+    font-size: 15px;
+}
+.article-slot-container p code {
+    color: rgb(201, 135, 11);
+    border-radius: 10px;
+    padding: 2px 2px 2px 2px;
 }
