Added projects and mobile styles

--- a/src/components/Blog.astro
+++ b/src/components/Blog.astro
@@ -52,11 +52,12 @@ if(allPosts.length === 0) {
         top: 115px;
         bottom: 85px;
         font-size: 18px;
+        padding-bottom: 65px;
     }
 
     .post-date {
-        padding-top: 5px;
-        padding-bottom: 10px;
+        padding-top: 10px;
+        padding-bottom: 20px;
         font-family: 'Inter-Regular';
         font-size: 14px;
     }
@@ -77,5 +78,18 @@ if(allPosts.length === 0) {
     .post-a {
         text-decoration: none;
         color: #5C6BC0;
+    }
+
+    @media (max-width: 450px) {
+        .posts-list-container {
+            position: relative;
+            width: 350px;
+            /*border: 1px solid black;*/
+            margin: 0 auto;
+            top: 115px;
+            bottom: 85px;
+            font-size: 18px;
+            padding-bottom: 65px;
+        }
     }
 </style>
