--- a/src/styles/markdown-post.css
+++ b/src/styles/markdown-post.css
@@ -80,3 +80,14 @@
     border-radius: 10px;
     padding: 2px 2px 2px 2px;
 }
+
+@media (max-width: 450px) {
+    .markdown-article {
+        position: relative;
+        width: 350px;
+        margin: 0 auto;
+        top: 95px;
+        padding-bottom: 100px;
+        font-size: 17px;
+    }
+}
