--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -56,7 +56,7 @@ const project: IProject[] = [
                     )
                 }
             <div class="project-link">
-                <a href={props.link} class="project-a">GitHub</a>
+                <a href={props.link} class="project-a">GitHub Repo</a>
             </div>
             <hr class="project-hr"></hr>
         </div>
