Updated about me and project info

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,7 @@ const indexTitle: string = "Alex Leung";
 		<div class="home-info-container">
 			<h1 class="home-heading">About Me</h1>
 			<p class="home-paragraph">
-				Hello, I'm Alex. I am interested in software development. 
+				Hello, I'm Alex. I am interested in software development and open-source. 
 				<br>
 				<br>
 				In my blog, I post about technology and random things.
