--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -11,7 +11,7 @@ interface IProject {
 const project: IProject[] = [
     {
         name: "Iris",
-        info: "Iris is a comfortable Markdown note-taking app.",
+        info: "A comfortable Markdown note-taking app.",
         link: "https://github.com/alexwkleung/Iris",
         language: ["TypeScript", "Rust"]
     },
