Updated home-info-container width and about info

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ const githubLink: string = "https://github.com/alexwkleung";
 		<div class="home-info-container">
 			<h1 class="home-heading">About Me</h1>
 			<p class="home-paragraph">
-				Hello, I'm Alex. I am interested in software development and open-source. 
+				Hello, I'm Alex. I am interested in software development, open-source, and human-computer interaction.
 				<br>
 				<br>
 				In my blog, I post about technology and random things.
