--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -32,10 +32,10 @@ const project: IProject[] = [
 <Navbar></Navbar>
 <div class="project-intro">
     <p id="project-intro-p">
-        Here is a list of my showcased projects. 
+        This is a list of my showcased projects. 
         <br>
         <br>
-        Other projects not in this list can be found on my GitHub.
+        Other projects can be found on my GitHub.
     </p>
 <div>
 <hr class="project-init-hr">
@@ -95,6 +95,7 @@ const project: IProject[] = [
     }
     .project-name-heading {
         font-family: 'Inter-Bold';
+        font-size: 35px;
     }
     .project-info-p {
         font-family: 'Inter-Regular';
@@ -113,7 +114,7 @@ const project: IProject[] = [
         /*border: 1px solid black;*/
         border-radius: 10px;
         padding: 3px 3px 3px 3px;
-        font-size: 14px;
+        font-size: 15px;
         background-color: rgb(208, 207, 207);
         margin-right: 4px;
     }
@@ -121,11 +122,13 @@ const project: IProject[] = [
         position: relative;
         top: 13px;
         border-color: rgb(144, 143, 143);
+        border-bottom: 0px;
     }
     .project-hr {
         position: relative;
         top: 25px;
         border-color: rgb(144, 143, 143);
+        border-bottom: 0px;
     }
 
     @media (max-width: 450px) {
