Update project styles

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -112,11 +112,11 @@ const project: IProject[] = [
     .project-language {
         font-family: 'Inter-Regular';
         /*border: 1px solid black;*/
-        border-radius: 10px;
+        border-radius: 5px;
         padding: 3px 3px 3px 3px;
         font-size: 15px;
-        background-color: rgb(208, 207, 207);
-        margin-right: 4px;
+        background-color: rgb(217 215 215);
+        margin-right: 6px;
     }
     .project-init-hr {
         position: relative;
