Update navbar class selectors

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -3,9 +3,9 @@ const githubLink: string = "https://github.com/alexwkleung";
 ---
 
 <div class="navbar-container">
-    <a href="/" class="home-a">Home</a>
-    <a href="/projects" class="projects-a">Projects</a>
-    <a href={githubLink} class="github-a">GitHub</a>
+    <a href="/" class="navbar-a">Home</a>
+    <a href="/projects" class="navbar-a">Projects</a>
+    <a href={githubLink} class="navbar-a">GitHub</a>
 </div>
 
 <style>
@@ -29,20 +29,9 @@ const githubLink: string = "https://github.com/alexwkleung";
         font-size: 18px;
     }
 
-    .home-a {
+    .navbar-a {
         text-decoration: none;
         padding-right: 10px;
-        color: #5C6BC0;
-    }
-
-    .projects-a {
-        text-decoration: none;
-        padding-right: 10px;
-        color: #5C6BC0;
-    }
-
-    .github-a {
-        text-decoration: none;
         color: #5C6BC0;
     }
 
