--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -38,7 +38,7 @@ const project: IProject[] = [
         <br>
         Other projects can be found on my GitHub.
     </p>
-<div>
+</div>
 <hr class="project-init-hr">
 {
     project.map((props) => 
@@ -90,13 +90,13 @@ const project: IProject[] = [
         font-size: 18px;
         margin: 0 auto;
         width: 640px;
-        top: 110px;
+        top: 100px;
     }
     .project-container {
         position: relative;
         margin: 0 auto;
         width: 640px;
-        top: 10px;
+        top: 122px;
         /*border: 1px solid black;*/
         padding-bottom: 10px;
     }
@@ -127,7 +127,8 @@ const project: IProject[] = [
     }
     .project-init-hr {
         position: relative;
-        top: 13px;
+        top: 120px;
+        width: 640px;
         border-color: rgb(144, 143, 143);
         border-bottom: 0px;
     }
@@ -145,15 +146,22 @@ const project: IProject[] = [
             font-size: 18px;
             margin: 0 auto;
             width: 300px;
-            top: 110px;
+            top: 100px;
         }
         .project-container {
             position: relative;
             margin: 0 auto;
             width: 300px;
-            top: 10px;
+            top: 122px;
             /*border: 1px solid black;*/
             padding-bottom: 10px;
+        }
+        .project-init-hr {
+            position: relative;
+            top: 120px;
+            width: 300px;
+            border-color: rgb(144, 143, 143);
+            border-bottom: 0px;
         }
     }
 </style>
