Add fallback font

--- a/src/components/Blog.astro
+++ b/src/components/Blog.astro
@@ -59,23 +59,23 @@ if(allPosts.length === 0) {
         padding-top: 10px;
         padding-bottom: 20px;
         padding-right: 10px;
-        font-family: 'Inter-Regular';
+        font-family: 'Inter-Regular', 'system-ui';
         font-size: 15px;
         color: grey;
     }
 
     .posts-list-heading {
-        font-family: 'Inter-Bold';
+        font-family: 'Inter-Bold', 'system-ui';
         font-size: 35px;
     }
     #post-count {
-        font-family: 'Inter-Regular';
+        font-family: 'Inter-Regular', 'system-ui';
         font-size: 17px;
     }
 
     .post-li {
         list-style: none;
-        font-family: 'Inter-Regular';
+        font-family: 'Inter-Regular', 'system-ui';
     }
 
     .post-a {
