--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -25,7 +25,7 @@ const githubLink: string = "https://github.com/alexwkleung";
         text-align: left;
         margin: 0 auto;
         top: 80px;
-        font-family: 'Inter-Regular';
+        font-family: 'Inter-Regular', 'system-ui';
         font-size: 18px;
     }
 
@@ -43,7 +43,7 @@ const githubLink: string = "https://github.com/alexwkleung";
             text-align: left;
             margin: 0 auto;
             top: 80px;
-            font-family: 'Inter-Regular';
+            font-family: 'Inter-Regular', 'system-ui';
             font-size: 18px;
         }
     }
