--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -80,13 +80,13 @@ const project: IProject[] = [
     }
 
     #project-intro-heading {
-        font-family: 'Inter-Bold';
+        font-family: 'Inter-Bold', 'system-ui';
         font-size: 35px;
     }
 
     .project-intro {
         position: relative;
-        font-family: 'Inter-Regular';
+        font-family: 'Inter-Regular', 'system-ui';
         font-size: 18px;
         margin: 0 auto;
         width: 640px;
@@ -101,23 +101,23 @@ const project: IProject[] = [
         padding-bottom: 10px;
     }
     .project-name-heading {
-        font-family: 'Inter-Bold';
+        font-family: 'Inter-Bold', 'system-ui';
         font-size: 35px;
     }
     .project-info-p {
-        font-family: 'Inter-Regular';
+        font-family: 'Inter-Regular', 'system-ui';
         font-size: 17px;
     }
     .project-a {
         position: relative;
-        font-family: 'Inter-Regular';
+        font-family: 'Inter-Regular', 'system-ui';
         text-decoration: none;
         color: #5C6BC0;
         font-size: 17px;
         top: 18px;
     }
     .project-language {
-        font-family: 'Inter-Regular';
+        font-family: 'Inter-Regular', system-ui;
         /*border: 1px solid black;*/
         border-radius: 5px;
         padding: 3px 3px 3px 3px;
@@ -142,7 +142,7 @@ const project: IProject[] = [
     @media (max-width: 450px) {
         .project-intro {
             position: relative;
-            font-family: 'Inter-Regular';
+            font-family: 'Inter-Regular', 'system-ui';
             font-size: 18px;
             margin: 0 auto;
             width: 300px;
