--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,10 @@ const indexTitle: string = "Alex Leung";
 		<div class="home-info-container">
 			<h1 class="home-heading">About Me</h1>
 			<p class="home-paragraph">
-				Hello, I'm Alex. I am interested in software development, open-source, and human-computer interaction.
+				Hello, I'm Alex.
+				<br>
+				<br>
+				My interests are software development, open-source, and human-computer interaction.
 			</p>
 		</div>
 		<Blog></Blog>
