Fix font-face import

--- a/src/components/Blog.astro
+++ b/src/components/Blog.astro
@@ -35,6 +35,15 @@ if(allPosts.length === 0) {
 </div>
 
 <style>
+    @font-face {
+        font-family: 'Inter-Regular';
+        src: url('../styles/fonts/Inter-Regular.ttf');
+    }
+    @font-face {
+        font-family: 'Inter-Bold';
+        src: url('../styles/fonts/Inter-Bold.ttf');
+    }
+
     .posts-list-container {
         position: relative;
         width: 640px;
