--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -65,6 +65,15 @@ const project: IProject[] = [
 </div>
 
 <style>
+    @font-face {
+        font-family: 'Inter-Regular';
+        src: url('../styles/fonts/Inter-Regular.ttf');
+    }
+    @font-face {
+        font-family: 'Inter-Bold';
+        src: url('../styles/fonts/Inter-Bold.ttf');
+    }
+
     body {
         margin: 0;
     }
